[metadata]
name = pymqttmicroservicebase-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = A basis library for MQTT based microservices in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pymqttmicroservicebase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt >= 1.6.1
    daemonize >= 2.5.0
    lockfile >= 0.12.2

[options.packages.find]
where = src
